<resources>
    <string name="app_name">LHU Companion</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_events">EventsActivity</string>

    <string name="bentleyHoursStr">Monday - Thursday:\n\t\tBreakfast \t(7:00 A.M.\t-\t10:30 A.M.)\n\t\tLunch \t(11:00 A.M.\t-\t2:15 P.M.)\n\t\tDinner \t(4:00 P.M.\t-\t7:45 P.M.)\n\nFriday:\n\t\tBreakfast \t(7:00 A.M.\t-\t10:30 A.M.)\n\t\tLunch \t(11:00 A.M.\t-\t2:15 P.M.)\n\t\tDinner \t(4:00 P.M.\t-\t6:30 P.M.)\n\nSaturday:\n\t\tBrunch \t(10:00 A.M.\t-\t2:00 P.M.)\n\t\tDinner \t(4:30 P.M.\t-\t6:30 P.M.)\n\nSunday:\n\t\tBrunch\t(10:00 A.M.\t-\t2:00 P.M.)\n\t\tDinner \t(4:30 P.M.\t-\t7:45 P.M.)</string>
    <string name="recHoursStr">Monday - Friday:\n\t\t7:00 A.M. - 11:00 P.M.\n\nSaturday:\n\t\t10:00 A.M. - 11:00 P.M.\n\nSunday:\n\t\t12:00 P.M. - 11:00 P.M.</string>
    <string name="glennonHoursStr">PHONE: 580-484-2276\nFAX: 570-484-2522\n\nLock Haven University is able to provide health care to the students at no charge for office visits.\n\nClinic Hours:\nMonday – Thursday:\n\t\t8:00 A.M. – 8:00 P.M.\n\nFriday:\n\t\t8:00 A.M. – 5:00 P.M.\n\nSaturday:\n\t\t10:00A.M. – 2:00 P.M\n\t\t(Limited Services)</string>
    <string name="bookStoreHours">Phone: 	(570)- 484-2750\nFax: 	(570)-484-2758\nEmail 	Manager: Jim Kownacki\n\nMonday - Friday:\n\t\t8am-4pm\n\nSaturday:\n\t\t11am-3pm</string>
    <string name="starbucks">Monday - Thursday:\n\t\t7:00 A.M\t-\t9P.M\nFriday:\n\t\t7:00 A.M\t-\t4P.M\nSaturday:\n\t\tCLOSED\nSunday:\n\t\t4:00 P.M\t-\t9P.M\n\t\t</string>


    <string name="homeText">Welcome to the LHU Companion App!\n\nWe did this project because we wanted future students to have an easier time navigating campus, knowing what events are happening, and to find resources they will need to submit to the school.\n\nLHU Companion is an application for everyone, new or current.\n\nWe hope you will find it very helpful.\nThank You.</string>
    <string name="akeleyHours">ALL WEEK\n\t\t24/7</string>
</resources>
