<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/lhu_eagle">

    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="15dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tap on an item to see its Information"
                android:paddingBottom="12dp"
                android:textSize="18dp"
                android:textStyle="italic"
                android:gravity="center"
                android:clickable="true"
                android:textColor="@color/black"/>

            <!-- activity_info layout file -->
            <!-- Clickable title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bentleyTitle"
                android:text="Bently Hours"
                android:background="@drawable/underline"
                android:paddingBottom="12dp"
                android:textSize="22dp"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="toggle_contents"
                android:textColor="@color/black"/>

            <!--content to hide/show -->
            <TextView
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:paddingBottom="12dp"
                android:id="@+id/txt_bentley_hours"
                android:text="@string/bentleyHoursStr"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/glennonTitle"
                android:text="Glennon Health Services"
                android:background="@drawable/underline"
                android:paddingBottom="12dp"
                android:textSize="22dp"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="toggle_contents"
                android:textColor="@color/black"/>

            <!--content to hide/show -->
            <TextView
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:paddingBottom="12dp"
                android:id="@+id/txt_glennon_hours"
                android:text="@string/glennonHoursStr"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recTitle"
                android:paddingBottom="12dp"
                android:text="Rec Center Hours"
                android:background="@drawable/underline"
                android:textSize="22dp"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="toggle_contents"
                android:textColor="@color/black"/>

            <!--content to hide/show -->
            <TextView
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:paddingBottom="12dp"
                android:id="@+id/txt_rec_hours"
                android:text="@string/recHoursStr"
                android:textColor="@color/black"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bookStoreTitle"
            android:paddingBottom="12dp"
            android:text="Book Store"
            android:background="@drawable/underline"
            android:textSize="22dp"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="toggle_contents"
            android:textColor="@color/black"/>

            <!--content to hide/show -->
            <TextView
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:paddingBottom="12dp"
                android:id="@+id/txt_bookStore_hours"
                android:text="@string/bookStoreHours"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/starbucksTitle"
                android:paddingBottom="12dp"
                android:text="Starbucks"
                android:background="@drawable/underline"
                android:textSize="22dp"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="toggle_contents"
                android:textColor="@color/black"/>

            <!--content to hide/show -->
            <TextView
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:paddingBottom="12dp"
                android:id="@+id/txt_starbucks_hours"
                android:text="@string/starbucks"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/akeleysTitle"
                android:paddingBottom="12dp"
                android:text="Akeley"
                android:background="@drawable/underline"
                android:textSize="22dp"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="toggle_contents"
                android:textColor="@color/black"/>

            <!--content to hide/show -->
            <TextView
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:paddingBottom="12dp"
                android:id="@+id/txt_akeley_hours"
                android:text="@string/akeleyHours"
                android:textColor="@color/black"/>



        </LinearLayout>

    </ScrollView>



</LinearLayout>